Fixed: X scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 @import './reset.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-
+html {
+    overflow-x: hidden;
+}
 
 body {
     font-family: 'Poppins', sans-serif;
